<resources>
    <string name="app_name">MiniPOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mini POS</string>
    <string name="nav_header_subtitle">by Mimo Apps</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_home">Belanja</string>
    <string name="menu_gallery">Inventory List</string>
    <string name="menu_slideshow">Kelompok Barang</string>
    <string name="menu_keranjang">Keranjang Belanja</string>
    <string name="menu_history">Riwayat Belanja</string>

    <string name="button_search_item_purple">Search</string>
    <string name="cart_name">Shopping Cart</string>
    <string name="txtItemCode">txtItemCode</string>
    <string name="_0">0</string>
    <string name="plus_sign">+</string>
    <string name="qty">QTY</string>
    <string name="txtunit">txtUnit</string>
    <string name="satuan">UNIT</string>
    <string name="txtprice">txtPrice</string>
    <string name="harga">PRICE</string>
    <string name="item_name">Item Name</string>
    <string name="txtitemcode">txtItemCode</string>
    <string name="kode_barang">Item Code(Automatic when empty)</string>
    <string name="nama_barang">Item Name</string>
    <string name="harga_beli">COGS</string>
    <string name="harga_jual">Selling Price</string>
    <string name="harga_grosir"> + Grocier Price</string>
    <string name="_1">Unit (KG, GRAM, ZAK, PACK)</string>
    <string name="contoh_kg_pak">e.g : KG, PAcK</string>
    <string name="harga_grosir1">Grocier Price</string>
    <string name="qty_grosir">QTY Grocier</string>
    <string name="_nol">0</string>
    <string name="input_harga_grosir">Input Grocier Price</string>
    <string name="jumlah_minimum">QTY Min.</string>
    <string name="harga_grosir2">Grocier Price</string>
    <string name="dikosongkan_berarti_otomatis">Automatic When Empty</string>
    <string name="save_item">SAVE</string>
    <string name="qty_itemdata">Qty</string>
    <string name="input_item">Input Inventory</string>
    <string name="daftar_inventory">Inventory List</string>
    <string name="membership">Membership</string>
    <string name="dashboard">Dashboard</string>
    <string name="save_order">Save Order</string>
    <string name="harga_jual_itemlist">Selling Price</string>
    <string name="harga_beli_itemlist">COGS</string>
    <string name="no_handphone_barcode_member"><![CDATA[No. Handphone & Barcode Member]]></string>
    <string name="textcashiermember">Minta kasir untuk memindai barcode / QR Code ini atau sebutkan nomor handphone anda</string>

    //Fragments Label
    <string name="label_frag_history">Riwayat Belanja</string>
    <string name="label_frag_shoppingcart">Keranjang Belanja</string>
    <string name="label_qty">Qty</string>
    <string name="hint_ketik_nama_barang_disini">Ketik nama barang disini...</string>
</resources>