<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.suksesinvent.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.suksesinvent.ui.gallery.GalleryFragment"
        android:label="@string/input_item"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.suksesinvent.ui.slideshow.SlideshowFragment"
        android:label="@string/daftar_inventory"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_membership"
        android:name="com.example.suksesinvent.ui.membership.MemberFragment"
        android:label="@string/membership"
        tools:layout="@layout/fragment_member" />

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.suksesinvent.ui.dashboard.DashFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dash" />

    <fragment
        android:id="@+id/nav_keranjang"
        android:name="com.example.suksesinvent.ui.shoppingcart.ShoppingCartFragment"
        android:label="@string/menu_keranjang"
        tools:layout="@layout/fragment_shoppingcart" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.suksesinvent.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

</navigation>