<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:id="@+id/card_grocier"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    android:elevation="5dp"
    android:background="@color/teal_700"
    app:cardBackgroundColor="@color/background_card_grocier"
    app:cardElevation="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:paddingBottom="20dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/lblQtyGrosir"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/qty_grosir"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtQTYGrosir"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_toEndOf="@+id/lblQtyGrosir"
            android:paddingEnd="5dp"
            android:text="@string/_nol"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/lblHargaGrosir"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/harga_grosir1"
            android:layout_below="@+id/lblQtyGrosir"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtHargaGrosir"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/lblHargaGrosir"
            android:layout_below="@+id/txtQTYGrosir"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="@string/_nol"
            android:textAlignment="textEnd"
            android:paddingEnd="5dp"
            tools:ignore="RtlSymmetry"
            android:textColor="@color/black"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
