<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="20dp"
    >


    <TextView
        android:id="@+id/titleGrosir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/input_harga_grosir"
        android:textAllCaps="true"
        android:textSize="18dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtQTYMinimum"
        android:text="@string/jumlah_minimum"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/titleGrosir"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/input_qty_min"
        android:layout_below="@+id/txtQTYMinimum"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPriceGrosir"
        android:text="@string/harga_grosir2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/input_qty_min"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/input_price"
        android:layout_below="@+id/txtPriceGrosir"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

<!--    <Button-->
<!--        android:id="@+id/btn_save_price_grocier"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_below="@id/input_price"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_marginTop="0dp"-->
<!--        android:layout_marginEnd="4dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:backgroundTint="@color/material_dynamic_neutral_variant60"-->
<!--        android:text="Save"/>-->

</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>